switch GC from G1 to ZGC generational for sub-ms pause times